--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -29,7 +29,7 @@ body {
     width: 100%;
     height: 44px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     border-bottom: 1px solid #d9d8d2;
     padding: 5px;
@@ -73,4 +73,18 @@ body {
 
 #addcat {
     margin-left: 10px;
+}
+
+#addlabel {
+    margin-left: 10px;
+}
+
+.newLabel {
+    width: 100%;
+    height: 44px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    position: relative;
 }
