--- a/assets/css/mainheader.css
+++ b/assets/css/mainheader.css
@@ -1,31 +1,263 @@
-.navbar {
-  display: flex;
-  align-items: flex-start;
-}
-.upper_img {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-bottom: 10px;
-}
-.logo_img{
-  flex: 3 0 auto;
-  margin:  0 auto;
-  padding: 0!important;
-  margin: 0!important;
-}
-.search_input{
-  margin-top: 7px;
-  flex: 1 0 auto;
-  height: 30px;
-}
+ #logoSvg{
+				width:140px;
+				height:15px;
+		}
 
-@media screen and (max-width: 860px) {
-  .upper_img{
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .search_input{
-    width: 100vw;
-  }
-}
+
+	
+	@media (min-width: 300px) {
+		#logoSvg{
+				width:300px;
+				height:30px;
+				margin-left:-20px;
+		}
+		
+	}
+
+	@media (max-width: 500px) {
+		#logoSvg{
+				width:350px;
+				height:50px;
+				margin-left:0px;				
+		}
+		.socialIcon{
+			display:block;
+		}
+	}
+
+	@media (min-width: 500px) {
+		#logoSvg{
+				width:500px;
+				height:60px;
+				margin-left:0px;
+		}
+		
+	}
+	@media (min-width: 760px) {
+		#logoSvg{
+			width:700px;
+			height:80px;
+			margin-left:0px;
+		}  
+		
+	}
+
+  	@media (min-width: 1200px) {
+	
+		.keresoForm2{
+			margin-top:27px;
+		}
+		
+		.keresoGomb{
+			width:10%;
+		}
+		
+		.kereso2{
+			width:90%;	
+		}
+	}
+	
+	@media (max-width: 1200px) {
+	
+		.keresoForm2{
+			margin-top:15px;
+			margin-bottom:15px;
+		}
+		
+		.keresoGomb{
+			width:5%;
+		}
+		
+		.kereso2{
+			width:95%;	
+		}
+		
+	}
+	
+	
+	@media (max-width: 700px) {
+	
+		.keresoForm2{
+			margin-top:15px;
+			margin-bottom:15px;
+		}
+		
+		.keresoGomb{
+			width:10%;
+		}
+		
+		.kereso2{
+			width:90%;	
+		}
+		
+	}
+	
+	
+	.keresoGomb{
+	
+		height:34px;
+		border: none;
+  		background: #FFF;
+  		color: #80caa5;
+  		font-size:28px;
+  		padding:0px;
+		margin:0px;
+		float:right;
+	}
+	
+	.kereso2{
+		border:none;
+		height:34px;
+		float:right;
+		padding:10px;
+		margin:0px;
+		
+	}
+	
+	.socialIcon{
+		margin:0 auto;
+		margin-top:2px;		
+	}
+
+  .cb{
+		clear:both;
+	}
+	
+	.fHelper{
+		display:flex;
+		align-items: center;
+	}
+	
+	.navNew20170213{
+		font-size:16px;
+	
+	}
+	
+	.menuBar2{
+		background-color: #80caa5;
+		font-size:16px;
+	}
+	
+	.container{
+		margin-top:0px !important;
+	}
+	
+	
+	/*
+		Navbar Módosítás
+	*/
+
+	@media (min-width: 1000px){
+		.navbar-nav>li>a {
+		    padding-left: 40px;
+		    padding-right: 40px;
+		    padding-top: 7px;
+		    padding-bottom: 7px;
+		}
+		
+		.navbar{
+			height:35px !important;
+			min-height:35px !important;
+		}
+		
+		
+		.navbar-toggle{
+			margin-top:0px !important;
+		}
+		
+		.menuBar2 > li{
+			height:34px;
+			margin:0px;
+			padding:0px;
+		}
+		
+		
+	}
+	
+	@media (max-width: 768px){
+	/*	#mainMenu{
+			margin-top:15px;
+		}*/
+		.navNew20170213{
+			
+			margin-top:15px !important;
+		}
+		.navbar-header{
+			height: 50px;
+			padding:0px !important;
+		}
+		
+		
+	}
+	
+	
+	
+	.navbar-nav>li>a {
+		color: white !important;
+	}
+	
+
+	
+	.nav .open > a, .nav .open > a:focus, .nav .open > a:hover,.nav > li > a:focus, .nav > li > a:hover, .dropdown-menu > li > a:focus, .dropdown-menu > li > a:hover{
+		background-color:transparent; !important;
+		/*color: white;*/
+	}
+	
+
+	
+	.boxTitle, .tagLabel{
+		background:#80caa5;
+	}
+	
+	.blog{
+		background:#337ab7;
+	}
+	
+	.blog>.boxTitleArrow {
+		background:#337ab7;
+	}
+	
+	.bbuton2{
+		background:#80caa5 !important;
+		border:0px solid;
+		padding:2px;
+		height:25px;
+	}
+	
+	.socialIcon a>i {
+	    font-size: 30px;
+	 
+	}
+	
+	.label{
+		display: inline-block !important;
+	}
+	
+	.dropdown-menu > li > a:hover, .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus { 
+
+    background-image: none;
+
+		background-color: #80CAA5 !important;
+	}
+	
+	.navbar.navbar-default .navbar-collapse {
+	  border: none !important;
+	  box-shadow: none !important;;
+	}
+   
+    #mainMenu{
+    	box-shadow: none;
+    }
+	
+	.boxContent li  a{
+		list-style-position:inside;
+	  white-space: nowrap;
+	  overflow: hidden;
+	  text-overflow: ellipsis;   
+	}
+	
+	.fb_iframe_widget{
+		    margin-top: -22px;
+			position: absolute !important;
+			margin-left: -115px;
+	}
