--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1,6 +1,15 @@
-.col-md-6 {
-  border: 2px solid black;
-  height: 350px;
+.box {
+  height: 250px;
+  padding: 10px;
+}
+h1 {
+  margin-top: 0px!important;
+}
+h4{
+  margin-top: 50px!important;
+}
+h5 {
+  margin-top: 20px!important;
 }
 
 .title{
@@ -12,4 +21,8 @@ a:link{
 }
 a:hover{
   text-decoration: none!important;
+}
+.fb-share-button{
+  margin-left: 0!important;
+  margin-top: 0!important;
 }
