Apache barátok -Olivér (ja nem mert ő nem is barát)

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,6 +38,12 @@ body {
     cursor: pointer;
 }
 
+.boxRow p {
+    overflow:hidden; 
+    white-space:nowrap; 
+    text-overflow: ellipsis;
+}
+
 .boxRow:hover {
     background-color: #d9d8d2;
 }
