--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -40,6 +40,10 @@
   display: flex!important;
   justify-content: flex-end!important;
 }
+.btn-primary{
+  border-color: #80caa5!important;
+}
+
 .left-div{
   width: 100%;
 }
@@ -48,4 +52,10 @@
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+}
+.error-p{
+  color: red!important;
+}
+textarea{
+  resize: none;
 }
