--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,9 +1,9 @@
 
 
 .boxAbout {
-    height: 550px;
     margin-bottom: 20px;
     overflow: hidden;
+    padding-bottom: 7px;
 }
 
 .boxAbout .box {
@@ -55,8 +55,9 @@
 .product {
     width: 190px;
     height: 190px;
-    background-image: url("http://i.imgur.com/Hyi2stK.jpg");
     background-size: contain;
+    background-repeat:   no-repeat;
+    background-position: center center;    
     position: relative;
 }
 
@@ -67,7 +68,6 @@
     align-items: center;
     bottom: 0px;
     right: 0px;
-    width: 100px;
     height: 40px;
     background-color:rgba(0, 0, 0, 0.5);
 }
