--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -62,7 +62,6 @@ h1, #loginbutton {
 {
     margin-top: 20px;
     padding: 40px 0px 20px 0px;
-    background-color: #f7f7f7;
     -moz-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
     box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
@@ -92,4 +91,9 @@ h1, #loginbutton {
 {
     display: block;
     margin-top: 10px;
+}
+.btn
+{
+    background-color: #80caa5!important;
+    border-color: #80caa5!important;
 }
