--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -70,6 +70,22 @@ body {
 .delete-row:hover {
     color:red;
 }
+.add-row {
+    position:absolute;
+    cursor: pointer;
+    color: black;
+    width: 44px;
+    height: 44px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    top:0px;
+    right: 5px;
+}
+
+.add-row:hover {
+    color:white;
+}
 .pin-row {
     position:absolute;
     width: 44px;
@@ -109,6 +125,16 @@ body {
     margin-left: 10px;
 }
 
+#addproduct {
+    margin-left: 10px;
+}
+
+#preview-img {
+    width: 200px;
+    height: 200px;
+    border: 1px solid grey;
+}
+
 .newLabel {
     width: 100%;
     height: 44px;
@@ -129,4 +155,69 @@ li {
   margin-right: 20px!important;
 
   margin-left: 15px!important;
+}
+
+.product {
+    width: 190px;
+    height: 190px;
+    background-size: contain;
+    background-repeat:   no-repeat;
+    background-position: center center;    
+    position: relative;
+}
+
+.price {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    bottom: 0px;
+    right: 0px;
+    height: 40px;
+    background-color:rgba(0, 0, 0, 0.5);
+}
+
+.price h2 {
+    color: white!important;
+    margin: 0!important;
+}
+
+.slide-inner {
+    height: 180px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid grey;
+    margin-bottom: 30px;
+    cursor: pointer;
+}
+
+.placeholder {
+    height:180px;
+}
+ 
+
+#productsHolder {
+    list-style-type: none;
+    padding: 0 10px 0 10px;
+}
+
+#productsHolder img{
+    max-height: 100%;
+    max-width: 100%;
+}
+
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+#prodprice {
+    margin: 10px 0 10px 0;
 }
