--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -8,7 +8,9 @@ body {
     box-shadow: 5px 5px 5px 0 rgba(224,224,222,1);
     margin-bottom: 20px;
 }
-
+.blog-btn{
+  margin-bottom: 20px!important;
+}
 .boxTitle {
     width: 100%;
     height: 30px;
@@ -162,7 +164,7 @@ li {
     height: 190px;
     background-size: contain;
     background-repeat:   no-repeat;
-    background-position: center center;    
+    background-position: center center;
     position: relative;
 }
 
@@ -195,7 +197,7 @@ li {
 .placeholder {
     height:180px;
 }
- 
+
 
 #productsHolder {
     list-style-type: none;
