--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -86,6 +86,24 @@ body {
 .add-row:hover {
     color:white;
 }
+
+.delete-product {
+    z-index: 100;
+    position:absolute;
+    width: 44px;
+    height: 44px;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    top:-12px;
+    right: 5px;
+}
+
+.delete-product:hover {
+    color: red;
+}
 .pin-row {
     position:absolute;
     width: 44px;
@@ -220,4 +238,8 @@ li {
 
 #prodprice {
     margin: 10px 0 10px 0;
+}
+
+#catselect {
+    margin-bottom: 20px;
 }
