--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -86,6 +86,11 @@
     justify-content: center;
 }
 
+.boxAboutIcon {
+    max-width: 80%!important;
+    max-height: 80%!important;
+}
+
 .slider-container {
     height: 250px;
     padding-left: 50px;
