--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -99,8 +99,8 @@ body {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    top:-12px;
-    right: 5px;
+    top:-9px;
+    right: -5px;
 }
 
 .delete-product:hover {
@@ -115,8 +115,8 @@ body {
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    top:-12px;
-    left: 5px;
+    top:-7px;
+    left: -5px;
 }
 
 .pin-product:hover {
@@ -168,7 +168,6 @@ body {
 #preview-img {
     width: 200px;
     height: 200px;
-    border: 1px solid grey;
 }
 
 .newLabel {
@@ -215,7 +214,6 @@ li {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid grey;
     margin-bottom: 30px;
     cursor: pointer;
 }
@@ -249,6 +247,31 @@ li {
 #prodprice {
     margin: 10px 0 10px 0;
 }
-#catselect {
+#catselect, #addCat {
     margin-bottom: 20px;
+}
+.pinned-product {
+    background-color: gold;
+}
+#productsHolder li {
+    border: 1px solid grey;
+}
+.product {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.uploadholder {
+    display : flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.uploadholder input {
+    margin-top: 5px;    
+}
+
+#preview-img {
+    cursor: pointer;
 }
