--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -22,7 +22,7 @@
     color: #000;
 }
 
-.shopHolder {
+.shopHolderInner {
     height: 220px;
     cursor: pointer;
     -moz-user-select: none;
@@ -34,13 +34,16 @@
    align-items: center;
 }
 
+.shopHolder {
+
+}
+
 .shopHolder:hover {
     background-color: #d9d9d9;
 }
 
 .boxAboutImgHolder {
     height: 100%;
-    display: flex;
     justify-content: center;
     align-items: center;
 }
@@ -56,10 +59,6 @@
     margin-right: 15px;
 }
 
-.boxAboutRow {
-    padding-left: 25px;
-    padding-right: 25px;
-}
 
 .icon {
     color:black;
