--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -49,8 +49,8 @@ body {
 }
 
 .boxAboutIcon{
-    max-width: 80%!important;
-    max-height: 80%!important;
+    max-width: 95%!important;
+    max-height: 95%!important;
 }
 
 .aboutholder {
@@ -67,4 +67,16 @@ body {
 }
 .dataholder {
     width: 100%;
+}
+.boxAboutRow {
+    width: 100%!important;
+}
+.vcenter {
+    display: inline-block!important;
+    vertical-align: middle!important;
+    float: none!important;
+}
+.innerimageholder {
+    display: flex;
+    justify-content: center;
 }
