--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -275,3 +275,8 @@ li {
 #preview-img {
     cursor: pointer;
 }
+#preview-img-blog {
+    cursor: pointer;
+    max-width: 100%;
+    max-height: 200px;
+}
