--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -30,3 +30,10 @@ a:hover{
   margin-left: 0!important;
   margin-top: 0!important;
 }
+.backgroundPic{
+  background-image: url("https://static.pexels.com/photos/56875/tree-dawn-nature-bucovina-56875.jpeg");
+  overflow: auto;
+}
+.blogSuggest{
+  height: 100%;
+}
