--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -22,7 +22,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 25%;
+  height: 90px;
   color: white!important;
   background-color:rgba(0, 0, 0, 0.5);
   padding: 10px;
