--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -17,6 +17,22 @@
   align-items: center;
 }
 
+@media (min-width: 992px) {
+    .rightColumn {
+        overflow-y: scroll;
+    }
+    .smallblog {
+      height: 200px!important;
+    }
+}
+@media (max-width: 992px) {
+    .rightColumn {
+        max-height: none!important;
+    }
+    .smallblog {
+      height: 300px!important;
+    }
+}
 .blogtext {
   position: absolute;
   bottom: 0;
