--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -16,9 +16,12 @@
   display: flex;
   align-items: center;
 }
+.rc {
+  overflow: hidden;
+}
 
 @media (min-width: 992px) {
-    .rightColumn {
+    .rc {
         overflow-y: scroll;
     }
     .smallblog {
@@ -26,7 +29,7 @@
     }
 }
 @media (max-width: 992px) {
-    .rightColumn {
+    .rc {
         max-height: none!important;
     }
     .smallblog {
