--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -88,6 +88,7 @@
     background-repeat:   no-repeat;
     background-position: center center;    
     position: relative;
+    cursor: pointer;
 }
 
 .price {
