--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -42,6 +42,7 @@
     right: 25px;
 }
 .boxAboutButtonSmall{
+    margin: 10px 0;
   background-color: #80caa5!important;
   color: white!important;
 
