--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -280,3 +280,12 @@ li {
     max-width: 100%;
     max-height: 200px;
 }
+
+.showpform {
+    display: none;
+}
+.showpform div{
+    display: flex;
+    flex-direction: row;
+    width: 300px;
+}
