--- a/assets/css/category.css
+++ b/assets/css/category.css
@@ -60,3 +60,10 @@
     color:black;
     margin-right: 5px;
 }
+
+
+.category_logo span {
+    position: absolute;
+    top: 50%;
+    font-style: bold;
+}
