--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,3 +103,13 @@ body {
         width: 100vw;
     }
 }
+
+.pimage a {
+
+        height: 100%;
+    /* width: 100%; */
+    object-fit: center;
+
+}
+
+
