--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -48,6 +48,21 @@
   color: white!important;
 
 }
+
+@media screen and (max-width: 600px) {
+    .boxAboutRow {
+        margin: 0!important;
+    }
+
+    .boxAboutDataHolderSmall {
+        flex-direction: column;
+    }
+
+    .buttonnnn {
+        
+    }
+}
+
 .fbButton{
   padding-top: 3px;
 }
