--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -29,7 +29,6 @@
     align-items: center;
 }
 .boxAboutDataHolderSmall {
-    height: 60px;
     display: flex;
     align-items: center;
 }
@@ -42,8 +41,7 @@
     right: 25px;
 }
 .boxAboutButtonSmall{
-  margin-bottom: 15px;
-  margin-right: 15px;
+  margin-right: 5px;
   background-color: #80caa5!important;
   color: white!important;
 
@@ -249,4 +247,20 @@
 .pimage_i {
     max-width: 100%!important;
     max-height: 100%!important;
+}
+.dataholder-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dataholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.dataholder .datatext {
+  margin: 0;
 }
