--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -177,3 +177,39 @@
     text-overflow: ellipsis!important;
     overflow: hidden!important;
 }
+
+
+.boxAboutDataHolderSmall {
+    align-items: center;
+}
+
+
+.boxAboutButtonSmall{
+  margin-right: 5px;
+  background-color: #80caa5!important;
+  color: white!important;
+
+}
+
+.boxAboutImgHolderSmall {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.dataholder-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.dataholder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.dataholder .datatext {
+  margin: 0;
+}
